# google-cloud-demos

./: .gitignore  README.md
app-engine-logging/: README.md  main.py  requirements.txt
app-engine-login-required/: .gcloudignore  README.md  app.yaml  main.py  requirements.in  requirements.txt
app-engine-mail/: README.md  main.py  requirements.in  requirements.txt
cloud-storage-python-server/: README.md  app.yaml  main.py
datastore-import/: README.md  dataimport.py  monopoly.csv
datastore-transactions/: README.md  main.py  requirements.txt  tests.py
ext-deferred-api/: README.md  main.py  queue.yaml  requirements.in  requirements.txt
gcloud-cli-auth/: README.md  main.py  requirements.in  requirements.txt
gcloud-cli-notes/: README.md
git-credentials-helper/: README.md  githelper.py
legacy-app-engine-apis/: README.md  app.yaml  main.py  requirements.txt
legacy-memcached-django/: README.md  app.yaml  main.py  (+1 more)
wagtail-images/: README.md  app.yaml  main.py  pyproject.toml  requirements.in  requirements.txt
wagtail-images/demo/: wsgi.py
wagtail-images/demo/settings/: base.py  dev.py
wagtail-images/demo/templates/: base.html
wagtail-images/googleimages/: apps.py  jinja2tags.py  models.py  operations.py
wagtail-images/googleimages/management/commands/: googleimages_copy.py
wagtail-images/googleimages/migrations/: 0001_initial.py  0002_copy_images.py
wagtail-images/home/: apps.py  models.py
wagtail-images/home/migrations/: 0001_initial.py
wagtail-images/home/templates/home/: blog_page.html  home_page.html  home_page_index.html
(+33 files in other folders)
